sjeng/use_undefined_identifier/c1/King
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/King/src/neval.c:706:16: error: use of undeclared identifier 'dword_66359C'
v3 = 2 * ( ( ( dword_66359C[sq] + 1) & 0xFFFFFFFE ^ 8 | c ^ ( dword_66359C[sq] + 1) & 1) == 0); 
               ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/King/src/neval.c:706:63: error: use of undeclared identifier 'dword_66359C'
v3 = 2 * ( ( ( dword_66359C[sq] + 1) & 0xFFFFFFFE ^ 8 | c ^ ( dword_66359C[sq] + 1) & 1) == 0); 
                                                              ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/King/src/obj/neval.o] Error 1
